--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.8"                                      # config format
 rayon = "1.7"                                     #  parallelism
 notify = "8.2.0"                                      #  file watcher
-
+indicatif = "0.18.0"
+dialoguer = "0.12.0"
+chrono = "0.4.42"
